temporary button fix - style still not aligned with design

--- a/landing/static/css/sass/_covid19-custom.scss
+++ b/landing/static/css/sass/_covid19-custom.scss
@@ -864,11 +864,6 @@
     
     .mobile-menu-button {
       display: inline-block;
-      padding: 4px;
-      border: 2px solid #ffffff;
-      color: #ffffff;
-      float: right;
-      cursor:pointer;
     }
     
     .govuk-header__logo {
